style: increase rock z-index to 5 and remove overflow hidden from About wrapper to prevent clipping

--- a/src/index.css
+++ b/src/index.css
@@ -266,7 +266,7 @@ form select option {
 .about-rock-right {
   position: absolute;
   pointer-events: none;
-  z-index: 1;
+  z-index: 5;
   will-change: transform;
 }
 
